--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/EmilioPG13/Backend-Estructura-NoSQL/issues"
   },
-  "homepage": "https://github.com/EmilioPG13/Backend-Estructura-NoSQL#readme"
+  "homepage": "https://github.com/EmilioPG13/Backend-Estructura-NoSQL#readme",
+  "dependencies": {
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.1"
+  }
 }
