--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "homepage": "https://github.com/EmilioPG13/Backend-Estructura-NoSQL#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "joi": "^17.6.1",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^6.6.1"
   }
 }
